--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
     </div>
  </div>
 </div>
+</div>
     <div class="section3right-side">
         
         <div class="section3right-side-img1"> 
@@ -320,7 +321,7 @@
 
     </div>
     </div>
-    </div>
+   
 
     </div>
     <!-- Third Section part ends -->
@@ -499,7 +500,7 @@
                 <div class="col-md-2">
                     <div class="footer-left-col3">
                         <h3>Contact</h3>
-                        <p>Help/Faq</p>
+                        <p>Help/FAQ</p>
                         <p>Press</p>
                         <p>Affilates</p>
                     </div>
