--- a/index.html
+++ b/index.html
@@ -542,6 +542,8 @@
             </div>
         </div>
     </div>
+    <p style="text-align: center;font-size: small;">All rights reserved &copy;bonvoyage.co </p>
+
 </footer>
 </body>
 </html>
